--- a/FactorNumber/Base.lproj/Main.storyboard
+++ b/FactorNumber/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,68 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FactorNumber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jeshoots-com-436787-unsplash.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="GBD-3J-GTm">
+                                <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wNC-xS-Ui9">
+                                <rect key="frame" x="114" y="65" width="550" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="if_Cross_Cricle_657912.png" translatesAutoresizingMaskIntoConstraints="NO" id="1y3-Fu-oh3">
+                                <rect key="frame" x="684" y="55" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="M40-Aw-RjJ"/>
+                                    <constraint firstAttribute="height" constant="50" id="Uk5-eN-hmZ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="813-NF-UCR">
+                                <rect key="frame" x="44" y="128" width="690" height="797"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <attributedString key="attributedText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="if_Tax_center_132003.png" translatesAutoresizingMaskIntoConstraints="NO" id="Vxg-r0-Lmw">
+                                <rect key="frame" x="46" y="57" width="48" height="48"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="813-NF-UCR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="44" id="4AW-JA-117"/>
+                            <constraint firstItem="wNC-xS-Ui9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="55r-Lj-96B"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="leading" secondItem="Vxg-r0-Lmw" secondAttribute="trailing" constant="-94" id="64Z-QZ-iNJ"/>
+                            <constraint firstItem="813-NF-UCR" firstAttribute="top" secondItem="1y3-Fu-oh3" secondAttribute="bottom" constant="23" id="BVw-Up-EMq"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="JCg-kF-Uph"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="813-NF-UCR" secondAttribute="trailing" constant="34" id="Jvz-5k-lvu"/>
+                            <constraint firstItem="wNC-xS-Ui9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="NzS-jh-s5g"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="POE-VR-br3"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="TqQ-kn-38h"/>
+                            <constraint firstItem="1y3-Fu-oh3" firstAttribute="leading" secondItem="wNC-xS-Ui9" secondAttribute="trailing" constant="20" id="Yl6-s6-zgs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1y3-Fu-oh3" secondAttribute="trailing" constant="34" id="Z1F-ac-wZk"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bTS-Uc-B7a"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="top" secondItem="1y3-Fu-oh3" secondAttribute="bottom" constant="-85" id="gkH-eL-Kjs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1y3-Fu-oh3" secondAttribute="trailing" constant="34" id="hO1-X4-Y34"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="813-NF-UCR" secondAttribute="bottom" constant="99" id="o1S-nq-F05"/>
+                            <constraint firstItem="GBD-3J-GTm" firstAttribute="top" secondItem="Vxg-r0-Lmw" secondAttribute="bottom" constant="-85" id="ofS-fF-Q4j"/>
+                            <constraint firstItem="wNC-xS-Ui9" firstAttribute="leading" secondItem="Vxg-r0-Lmw" secondAttribute="trailing" constant="20" id="zbj-KJ-UT7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="117.39130434782609"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="if_Cross_Cricle_657912.png" width="256" height="256"/>
+        <image name="if_Tax_center_132003.png" width="48" height="48"/>
+        <image name="jeshoots-com-436787-unsplash.jpg" width="1417" height="945"/>
+    </resources>
 </document>
